--- a/ansible-files/roles/apache/vars/main.yml
+++ b/ansible-files/roles/apache/vars/main.yml
@@ -1,2 +1,7 @@
 ---
 # vars file for apache
+tomcat_path: /opt/SP/apps/tomcat
+tomcat_tar_url: https://archive.apache.org/dist/tomcat/tomcat-9/v9.0.10/bin/apache-tomcat-9.0.10.tar.gz
+remove_root: /opt/SP/apps/tomcat/webapps/ROOT
+html_path: /var/www/html
+artifact: 
