--- a/ansible-files/jenkinsfile
+++ b/ansible-files/jenkinsfile
@@ -42,7 +42,7 @@ notify('Job Completed')
 
 def notify(status){
     emailext (
-	to: "pattnaikabhishek1996@gmail.com",
+	to: "devashishkumar311@gmail.com",
 	subject: "${status}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'",
 	 body: """<p>${status}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
 	<p>Check console output at <a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a></p>""",
