--- a/ansible-files/roles/apache/vars/main.yml
+++ b/ansible-files/roles/apache/vars/main.yml
@@ -4,4 +4,4 @@ tomcat_path: /opt/SP/apps/tomcat
 tomcat_tar_url: https://archive.apache.org/dist/tomcat/tomcat-9/v9.0.10/bin/apache-tomcat-9.0.10.tar.gz
 remove_root: /opt/SP/apps/tomcat/webapps/ROOT
 html_path: /var/www/html
-artifact: 
+artifact: userproject-0.0.1-SNAPSHOT.war
