--- a/ansible-files/roles/apache/tasks/main.yml
+++ b/ansible-files/roles/apache/tasks/main.yml
@@ -1,2 +1,7 @@
 ---
-# tasks file for apache
+# tasks file for roles
+- name: Create Dir to Downlaod Tomcat. 
+  file: path=/opt/SP/apps/tomcat state=directory
+
+- include: java.yml
+- include: tomcat.yml
