--- a/ansible-files/jenkinsfile
+++ b/ansible-files/jenkinsfile
@@ -6,7 +6,9 @@ node {
   stage('Git-Checkout') {
    git 'https://github.com/devops311/ansible-configuration.git'
   }
-      
+  def project_path="ansible-files"
+ 
+ dir(project_path) {
      
  stage(' Downloading Jar From Artifactory Locally'){
     def server= Artifactory.server 'Artifactory'
@@ -32,9 +34,9 @@ stage('Geting Ready For Ansible') {
   */
   
   stage('Ansible Configuration'){
-  sh label: 'terraform', script: 'ansible-playbook -i /root/.jenkins/workspace/terraform-deployment-role/terraform/jenkins-ci.ini -u ubuntu --key /root/.ssh/key.pem  /root/.jenkins/workspace/ansible-deployment-role/ansible-files/web-playbook.yaml'
+  sh label: 'terraform', script: 'ansible-playbook -i /root/.jenkins/workspace/terraform-deployment-role/terraform/jenkins-ci.ini -u ubuntu --key /root/.ssh/key.pem web-playbook.yaml'
 }  
-
+}
 notify('Job Completed')   
 } catch (err) {
   notify("Error ${err}")
