--- a/ansible-files/roles/apache/tasks/main.yml
+++ b/ansible-files/roles/apache/tasks/main.yml
@@ -1,7 +1,8 @@
 ---
-# tasks file for roles
+# tasks file for apache
 - name: Create Dir to Downlaod Tomcat. 
-  file: path=/opt/SP/apps/tomcat state=directory
+  file: path={{ tomcat_path }} state=directory
 
 - include: java.yml
 - include: tomcat.yml
+
