--- a/ansible-files/roles/apache/tasks/tomcat.yml
+++ b/ansible-files/roles/apache/tasks/tomcat.yml
@@ -1,15 +1,14 @@
 ---
-#this playbook is to install tomcat.
   - name: Download Tomcat
-    get_url: url=https://archive.apache.org/dist/tomcat/tomcat-9/v9.0.10/bin/apache-tomcat-9.0.10.tar.gz dest=/opt/SP/apps/tomcat.tar.gz mode=0755 
+    get_url: url={{ tomcat_tar_url }} dest={{ apps_path }}/tomcat.tar.gz mode=0755 
 
   - name: Extract Tomcat
-    command: "tar zxf /opt/SP/apps/tomcat.tar.gz  -C /opt/SP/apps/tomcat --strip-components 1"
+    command: "tar zxf {{ apps_path }}/tomcat.tar.gz  -C {{ tomcat_path }} --strip-components 1"
    
   - name: Remove ROOT folder initially
-    command: rm -rf /opt/SP/apps/tomcat/webapps/*
+    command: rm -rf {{ remove_root }}
     
-  - name: Copy DevOps Project War Files
-    copy: src=/root/.jenkins/workspace/capstoneAnsible/templates/kalingamusic-0.0.1-SNAPSHOT.war dest=/opt/SP/apps/tomcat/webapps/ROOT.war mode=0644
+  - name: Copy bikes Project War Files
+    copy: src=/root/.jenkins/workspace/production/ansible/warstorage/{{ artifact }} dest={{ tomcat_path }}/webapps/ROOT.war mode=0644
     notify: 
     - Restart Tomcat
