--- a/ansible-files/roles/apache/vars/main.yml
+++ b/ansible-files/roles/apache/vars/main.yml
@@ -5,3 +5,6 @@ tomcat_tar_url: https://archive.apache.org/dist/tomcat/tomcat-9/v9.0.10/bin/apac
 remove_root: /opt/SP/apps/tomcat/webapps/ROOT
 html_path: /var/www/html
 artifact: userproject-0.0.1-SNAPSHOT.war
+apps_path: /opt/SP/apps
+
+
