--- a/ansible-files/roles/apache/tasks/tomcat.yml
+++ b/ansible-files/roles/apache/tasks/tomcat.yml
@@ -8,7 +8,7 @@
   - name: Remove ROOT folder initially
     command: rm -rf {{ remove_root }}
     
-  - name: Copy bikes Project War Files
+  - name: Coping Project War Files
     copy: src=/root/.jenkins/workspace/terraform-deployment-role/terraform/warstorageprod/{{ artifact }} dest={{ tomcat_path }}/webapps/ROOT.war mode=0644
     notify: 
     - Restart Tomcat
